base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: guacamole
  type: ClusterIP
