base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
spec:
  rules:
    - host: guacamole.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: guacamole
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: ''
